--- a/html/pfappserver/root/config/floatingdevice/index.tt
+++ b/html/pfappserver/root/config/floatingdevice/index.tt
@@ -26,7 +26,7 @@
 
       [%- IF can_access("FLOATING_DEVICES_CREATE") %]
       <div class="form-actions">
-        <a class="btn createItem" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add floating device') %]</a>
+        <a class="btn createFloatingDevice" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add floating device') %]</a>
       </div>
       [%- END %]
       </div>
