--- a/html/pfappserver/root/config/provisioning/index.tt
+++ b/html/pfappserver/root/config/provisioning/index.tt
@@ -28,9 +28,9 @@
         <div class="form-actions">
           <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown">[% l('Add provisioner') %] <span class="caret"></span></a>
-            <ul id="createSource" class="dropdown-menu">
+            <ul class="dropdown-menu">
               [% FOREACH type IN types -%]
-                <li><a class="createItem" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
+                <li><a class="createProvisioner" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
               [% END -%]
             </ul>
           </div>
