--- a/html/pfappserver/root/config/pfmon/view.tt
+++ b/html/pfappserver/root/config/pfmon/view.tt
@@ -7,7 +7,13 @@
   [%- IF item.id %]<input type="hidden" name="id" value="[% item.id | html %]">[% END %]
   <div class="modal-header">
     <a class="close" data-dismiss="modal">&times;</a>
-    <h3>[% IF item %]<i>[% l('Pfmon Task') %]</i> [% item.id | html %][% ELSE %][% l('New Pfmon Entry') %][% END %]</h3>
+    <h3>
+    [% IF item %]<i>[% l('Pfmon Task') %]</i> [% item.id | html %][% ELSE %][% l('New Pfmon Entry') %][% END %]
+
+    [% IF form.task_description %]
+    <p class="p3 p-info">[% form.task_description %]</p>
+    [% END %]
+    </h3>
   </div>
 
   <div class="modal-body">
