(web admin) Minor improvements to stylesheet

--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -28,6 +28,7 @@
 @import "bootstrap/dropdowns";
 @import "dropdowns";
 @import "bootstrap/wells";
+@import "wells";
 @import "bootstrap/component-animations";
 @import "bootstrap/close";
 
