--- a/html/pfappserver/root/static/scss/_variables.scss
+++ b/html/pfappserver/root/static/scss/_variables.scss
@@ -25,3 +25,7 @@ $gridColumns:             18; // default is 12
 // Horizontal forms & lists
 // -------------------------
 $horizontalComponentOffset:       180px;
+
+// Wells
+// -------------------------
+$wellBackground:                  transparent;
