--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -21,7 +21,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body[% IF readonly_mode %] class="navbar-error"[% END %]>
 
     <div class="alert alert-block hide">
       <button class="close" data-dismiss="alert">&times;</button>
@@ -38,7 +38,7 @@
       <strong>[% l('Error!') %]</strong> <span></span>
     </div>
 
-    <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
+    <div id="navbar" class="navbar navbar-fixed-top navbar-inverse[% IF readonly_mode %] navbar-error[% END %]">
       <div class="navbar-inner">
         <div class="row-fluid">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -116,15 +116,14 @@
           </div><!--/.nav-collapse -->
           [%- END %]
         </div>
+        [% IF readonly_mode %]
+        <div class="row-error">
+          <strong>[% l('Warning!') %]</strong>
+          <span>[% l('The database is in readonly mode. Not all functionality is available.') %]</span>
+        </div>
+        [% END %]
       </div>
     </div>
-    [%- IF c.user_allowed_in_admin() && readonly_mode %]
-    <div class="alert alert-error alert-block">
-      <button class="close" data-dismiss="alert">&times;</button>
-      <strong>[% l('Warning!') %]</strong>
-      <span>[% l('The database is in readonly mode not all functionality is available') %]</span>
-    </div>
-    [% END %]
 [% content | none %]
 
     <!-- Le javascript
