(web admin) Minor CSS improvement

--- a/html/pfappserver/root/static/scss/_type.scss
+++ b/html/pfappserver/root/static/scss/_type.scss
@@ -23,6 +23,10 @@ h1 small {
   font-weight: 200;
 }
 
+h3 small {
+  font-weight: 200;
+}
+
 .p3 {
   color: #565656;
   font-size: $baseFontSize - 1;
