take pfmon task description from pfmon.conf.defaults

--- a/html/pfappserver/root/config/pfmon/view.tt
+++ b/html/pfappserver/root/config/pfmon/view.tt
@@ -11,7 +11,7 @@
     [% IF item %]<i>[% l('Pfmon Task') %]</i> [% item.id | html %][% ELSE %][% l('New Pfmon Entry') %][% END %]
 
     [% IF form.task_description %]
-    <p class="p3 p-info">[% form.task_description %]</p>
+    <p class="p3 p-info">[% task_description %]</p>
     [% END %]
     </h3>
   </div>
