--- a/html/pfappserver/root/authentication/source/type/LDAP.tt
+++ b/html/pfappserver/root/authentication/source/type/LDAP.tt
@@ -12,7 +12,7 @@
 [% form.field('binddn').render | none %]
 [% form.field('cache_match').render | none %]
         <div class="control-group">
-          <label class="control-label">[% l('Password') %] <i class="icon-exclamation-sign"></i></label>
+          <label class="control-label">[% l('Password') %] <i class="icon-exclamation-circle"></i></label>
           <div class="controls">
             [% form.field('password').render_element | none %]
             <a class="btn" id="testSource" href="[% c.uri_for(c.controller('Config::Authentication::Source').action_for('test'), [source.type]) %]">[% l('Test') %]</a>
