--- a/html/pfappserver/root/config/floatingdevice/list.tt
+++ b/html/pfappserver/root/config/floatingdevice/list.tt
@@ -14,7 +14,7 @@
             <td class="item"><a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]">[% item.id | html %]</a></td>
             <td>[% item.ip %][% IF item.switch %] <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('view'), [ item.switch.id ]) %]">[% l('Edit switch') %]</a>[% END %]</td>
             <td class="hidden-phone">[% item.pvid | html %]</td>
-            <td class="hidden-phone">[% IF item.trunkPort == 'yes' %]<i class=" icon-ok"></i>[% END %]</td>
+            <td class="hidden-phone">[% IF item.trunkPort == 'yes' %]<i class="icon-check"></i>[% END %]</td>
             <td>
               <div class="text-right">
               [%- IF can_access("FLOATING_DEVICES_CREATE") %]
