--- a/html/pfappserver/root/configurator/fingerbank.tt
+++ b/html/pfappserver/root/configurator/fingerbank.tt
@@ -54,7 +54,7 @@
 
             </div>
             <div class="form-actions">
-              <button type="submit" class="btn btn-primary pull-right" href="[% next_step %]">[% l('Continue') %] <i class="icon-circle-arrow-right icon-white"></i></button>
+              <button type="submit" class="btn btn-primary pull-right" href="[% next_step %]">[% l('Continue') %] <i class="icon-arrow-circle-right icon-white"></i></button>
             </div>
             </form>
           </div>
