--- a/addons/monit/monit_checks_configurations/00_packetfence.tt
+++ b/addons/monit/monit_checks_configurations/00_packetfence.tt
@@ -3,7 +3,7 @@
 
 # - Alert every day at 6AM
 # - Do not use Monit alerting since calling external 'mail' command
-check program patch with path /usr/local/pf/addons/pf-maint.pl -t
+CHECK PROGRAM patch WITH PATH /usr/local/pf/addons/pf-maint.pl -t
     group PacketFence
     every "0 6 * * *"
     [% FOREACH email IN EMAILS %]
@@ -14,100 +14,100 @@ check program patch with path /usr/local/pf/addons/pf-maint.pl -t
 
 # PacketFence services checks
 
-check process packetfence-config with pidfile /usr/local/pf/var/run/pfconfig.pid
+CHECK PROCESS packetfence-config MATCHING "pfconfig"
     group PacketFence
     start program = "[% SERVICE_BIN %] packetfence-config start" with timeout 60 seconds
     stop program  = "[% SERVICE_BIN %] packetfence-config stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-redis-cache with pidfile /usr/local/pf/var/run/redis_cache.pid
+CHECK PROCESS packetfence-redis-cache MATCHING "redis-server \*:6379"
     group PacketFence
     start program = "[% SERVICE_BIN %] packetfence-redis-cache start" with timeout 60 seconds
     stop program  = "[% SERVICE_BIN %] packetfence-redis-cache stop"
     if failed host 127.0.0.1 port 6379 protocol redis for 5 cycles then alert
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-dhcpd with pidfile /usr/local/pf/var/run/dhcpd.pid
+CHECK PROCESS packetfence-dhcpd MATCHING "dhcpd"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service dhcpd start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service dhcpd stop"
     if 3 restarts within 10 cycles then alert
     if cpu usage > 90% for 10 cycles then restart
 
-check process packetfence-httpd.aaa with pidfile /usr/local/pf/var/run/httpd.aaa.pid
+CHECK PROCESS packetfence-httpd.aaa MATCHING "pf/var/conf/httpd.conf.d/httpd.aaa"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service httpd.aaa start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service httpd.aaa stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-httpd.admin with pidfile /usr/local/pf/var/run/httpd.admin.pid
+CHECK PROCESS packetfence-httpd.admin MATCHING "pf/var/conf/httpd.conf.d/httpd.admin"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service httpd.admin start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service httpd.admin stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-httpd.graphite with pidfile /usr/local/pf/var/run/httpd.graphite.pid
+CHECK PROCESS packetfence-httpd.graphite MATCHING "pf/var/conf/httpd.conf.d/httpd.graphite"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service httpd.graphite start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service httpd.graphite stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-httpd.parking with pidfile /usr/local/pf/var/run/httpd.parking.pid
+CHECK PROCESS packetfence-httpd.parking MATCHING "pf/var/conf/httpd.conf.d/httpd.parking"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service httpd.parking start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service httpd.parking stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-httpd.portal with pidfile /usr/local/pf/var/run/httpd.portal.pid
+CHECK PROCESS packetfence-httpd.portal MATCHING "pf/var/conf/httpd.conf.d/httpd.portal"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service httpd.portal start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service httpd.portal stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-httpd.webservices with pidfile /usr/local/pf/var/run/httpd.webservices.pid
+CHECK PROCESS packetfence-httpd.webservices MATCHING "pf/var/conf/httpd.conf.d/httpd.webservices"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service httpd.webservices start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service httpd.webservices stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-pfdns with pidfile /usr/local/pf/var/run/pfdns.pid
+CHECK PROCESS packetfence-pfdns MATCHING "pfdns"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service pfdns start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service pfdns stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-pfmon with pidfile /usr/local/pf/var/run/pfmon.pid
+CHECK PROCESS packetfence-pfmon MATCHING "pfmon"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service pfmon start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service pfmon stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-pfdhcplistener with pidfile /usr/local/pf/var/run/pfdhcplistener.pid
+CHECK PROCESS packetfence-pfdhcplistener MATCHING "pfdhcplistener"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service pfdhcplistener start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service pfdhcplistener stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-pfqueue with pidfile /usr/local/pf/var/run/pfqueue.pid
+CHECK PROCESS packetfence-pfqueue MATCHING "pfqueue"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service pfqueue start" with timeout 60 seconds
     stop program  = "/usr/local/pf/bin/pfcmd service pfqueue stop"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-radiusd-acct with pidfile /usr/local/pf/var/run/radiusd-acct.pid
+CHECK PROCESS packetfence-radiusd-acct MATCHING "pf/raddb -n acct"
     group PacketFence
     start program = "/usr/sbin/[% FREERADIUS_BIN %] -d /usr/local/pf/raddb -n acct" with timeout 60 seconds
     stop program  = "/usr/bin/pkill -F /usr/local/pf/var/run/radiusd-acct.pid"
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-radiusd with pidfile /usr/local/pf/var/run/radiusd.pid
+CHECK PROCESS packetfence-radiusd-auth MATCHING "pf/raddb -n auth"
     group PacketFence
     start program = "/usr/sbin/[% FREERADIUS_BIN %] -d /usr/local/pf/raddb -n auth" with timeout 60 seconds
     stop program  = "/usr/bin/pkill -F /usr/local/pf/var/run/radiusd.pid"
     if failed host 127.0.0.1 port 18120 type udp protocol radius secret testing123 for 5 cycles then alert
     if 3 restarts within 10 cycles then alert
 
-check process packetfence-redis_queue with pidfile /usr/local/pf/var/run/redis_queue.pid
+CHECK PROCESS packetfence-redis_queue MATCHING "redis-server \*:6379"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service redis_queue start" with timeout 60 seconds
     stop program = "/usr/local/pf/bin/pfcmd service redis_queue stop"
@@ -115,14 +115,14 @@ check process packetfence-redis_queue with pidfile /usr/local/pf/var/run/redis_q
     if 3 restarts within 10 cycles then alert
 
 [% IF DOMAINS.size > 0 %]
-check process packetfence-winbind with pidfile /usr/local/pf/var/run/winbindd-wrapper.pid
+CHECK PROCESS packetfence-winbind MATCHING "winbindd-wrapper"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service windbindd start" with timeout 60 seconds
     stop program = "/usr/local/pf/bin/pfcmd service windbindd stop"
     if 3 restarts within 10 cycles then alert
 
 [% FOREACH domain IN DOMAINS.keys %]
-check process packetfence-winbind-[% domain %] with pidfile [% DOMAINS.$domain %]
+CHECK PROCESS packetfence-winbind-[% domain %] MATCHING "/chroots/[% domain %] /usr/sbin/winbindd"
     group PacketFence
     if changed ppid then alert
     depends on packetfence-winbind
