--- a/addons/monit/monit_checks_configurations/00_packetfence.tt
+++ b/addons/monit/monit_checks_configurations/00_packetfence.tt
@@ -97,13 +97,13 @@ CHECK PROCESS packetfence-pfqueue MATCHING "pfqueue"
 CHECK PROCESS packetfence-radiusd-acct MATCHING "pf/raddb -n acct"
     group PacketFence
     start program = "/usr/sbin/[% FREERADIUS_BIN %] -d /usr/local/pf/raddb -n acct" with timeout 60 seconds
-    stop program  = "/usr/bin/pkill -F /usr/local/pf/var/run/radiusd-acct.pid"
+    stop program  = "/usr/bin/pkill -f '/usr/sbin/[% FREERADIUS_BIN %] -d /usr/local/pf/raddb -n acct'"
     if 3 restarts within 10 cycles then alert
 
 CHECK PROCESS packetfence-radiusd-auth MATCHING "pf/raddb -n auth"
     group PacketFence
     start program = "/usr/sbin/[% FREERADIUS_BIN %] -d /usr/local/pf/raddb -n auth" with timeout 60 seconds
-    stop program  = "/usr/bin/pkill -F /usr/local/pf/var/run/radiusd.pid"
+    stop program  = "/usr/bin/pkill -f '/usr/sbin/[% FREERADIUS_BIN %] -d /usr/local/pf/raddb -n auth'"
     if failed host 127.0.0.1 port 18120 type udp protocol radius secret testing123 for 5 cycles then alert
     if 3 restarts within 10 cycles then alert
 
