--- a/html/pfappserver/root/static/scss/_chosen.scss
+++ b/html/pfappserver/root/static/scss/_chosen.scss
@@ -25,25 +25,25 @@
 
 /* @group Single Chosen */
 .chzn-container-single .chzn-single {
-  @include gradient-vertical-three-colors(#ffffff, #eeeeee, 50%, #f4f4f4);
   @include border-radius(5px);
   @include background-clip(padding-box);
-  border: 1px solid #aaaaaa;
-  @include box-shadow(inset 0 0 3px #ffffff, 0 1px 1px rgba(0,0,0,0.1));
+  border: 1px solid $inputBorder;
   display: block;
   overflow: hidden;
   white-space: nowrap;
   position: relative;
-  height: 23px;
-  line-height: 24px;
+  height: $inputHeight;
+  line-height: $inputHeight;
   padding: 0 0 0 8px;
   color: #444444;
   text-decoration: none;
+  box-sizing: border-box;
 }
 .chzn-container-single .chzn-default {
   color: #999;
 }
 .chzn-container-single .chzn-single span {
+  line-height: 28px;
   margin-right: 26px;
   display: block;
   @include text-overflow()
@@ -72,11 +72,12 @@
   top: 0;
   display: block;
   height: 100%;
-  width: 18px;
+  width: 14px;
 }
 .chzn-container-single .chzn-single div b {
   &:after {
-    content: '\f078';
+    color: $gray;
+    content: '\f0d7'; // caret-down
     font-family: FontAwesome;
   }
   display: block;
@@ -223,7 +224,7 @@
   display: list-item;
 }
 .chzn-results .highlighted {
-  @include gradient-vertical( lighten($linkColor, 5%), darken($linkColor, 5%) );
+  background-color: $linkColor;
   color: #fff;
 }
 .chzn-results li em {
@@ -271,7 +272,7 @@
   border-left: none;
 }
 .chzn-container-active .chzn-single-with-drop div b:after {
-  content: '\f077';
+  content: '\f0d8'; // caret-up
 }
 .chzn-container-active .chzn-choices {
   -webkit-border-bottom-left-radius : 0;
