--- a/html/pfappserver/root/static/scss/_type.scss
+++ b/html/pfappserver/root/static/scss/_type.scss
@@ -19,6 +19,13 @@ h3 {
   font-weight: 200;
 }
 
+/* Restore 2.0.4 apparence */
+h6 {
+  font-size: $baseLineHeight * 0.55;
+  color: $grayLight;
+  text-transform: uppercase;
+}
+
 h1 small {
   font-weight: 200;
 }
