(web admin) Add btn to copy IP to clipboard
Fixes #2081

--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -131,7 +131,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript">
     var labels = {
-        "Cannot Load Content": "[% l('Cannot Load Content') | js %]"
+      "Cannot Load Content": "[% l('Cannot Load Content') | js %]",
+      "Copy": "[% l('Copy') | js %]",
+      "Copied": "[% l('Copied') | js %]",
     };
     </script>
     <script type="text/javascript" src="[% c.uri_for('/static/js/vendor/jquery.min.js') %]"></script>
