--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -22,6 +22,7 @@
 @import "bootstrap/forms";
 @import "forms";
 @import "bootstrap/tables";
+@import "tables";
 
 // Components: common
 //@import "bootstrap/sprites";
@@ -75,6 +76,7 @@
 @import "sidenav";
 @import "icon";
 @import "card";
+@import "clipboard";
 
 // Responsive
 @import "bootstrap/responsive";
