--- a/html/pfappserver/root/configuration/profiling.tt
+++ b/html/pfappserver/root/configuration/profiling.tt
@@ -1,5 +1,9 @@
 <p class="p3 p-info">[% l('This section is for devices profiling. Fingerbank will help you identify every device type on your network.') %]</p>
 <div class="card">
+  <div class="card-title">
+    <h2>[% l('Fingerbank Profiling') %]</h2>
+    [% INCLUDE config/fingerbank/header.tt %]
+  </div>
   <div class="card-block">
     <ul class="nav nav-tabs">
       [% FOREACH available_tab IN tabs.keys %]
