--- a/html/captive-portal/templates/layout.html
+++ b/html/captive-portal/templates/layout.html
@@ -75,19 +75,9 @@
           [% UNLESS preregistration %]
           <footer>
             <div class="divider u-m"></div>
-            <div class="layout layout--tiny layout--center">
-              <div class="layout__item [ u-1/3 u-1/2-palm ]">
-                <div class="u-m--">
-                  <p class="layout--right">[% i18n("help: provide info") %]</p>
-                </div>
-              </div
-                ><div class="layout__item [ u-1/3 u-1/2-palm ]">
-                <div class="u-m--">
-                  <p class="u-mb--">IP <b>[% client_ip %]</b></p>
-                  <p>MAC <b>[% client_mac %]</b></p>
-                </div>
-            </div
-              ></div>
+            <p>[% i18n("help: provide info") %]</p>
+            <p class="u-mb--">IP <b>[% client_ip %]</b></p>
+            <p>MAC <b>[% client_mac %]</b></p>
           </footer>
           [% END %]
 
