(web admin) Improve doc link in "danger" navbar

--- a/html/pfappserver/root/static/scss/_navbar.scss
+++ b/html/pfappserver/root/static/scss/_navbar.scss
@@ -76,6 +76,12 @@ $navbarErrorHeight: 32px;
     text-align: center;
     height: $navbarErrorHeight;
     line-height: $navbarErrorHeight;
+    a {
+      color: $white;
+      i {
+        font-size: 1rem;
+      }
+    }
   }
 }
 // Because of additional error message bellow the main navbar, lower the content accordingly
