(web admin) Review Fingerbank settings fields
Simplified solution to issue #1693

--- a/html/pfappserver/root/config/fingerbank/settings/index.tt
+++ b/html/pfappserver/root/config/fingerbank/settings/index.tt
@@ -1,7 +1,7 @@
 <h2>[% l('Fingerbank Settings') %]</h2>
 <br/>
 
-<form name="section" id="fingerbankSettings" class="form-horizontal" action="[%c.uri_for(c.controller.action_for('index'))%]" method="post">
+<form name="section" class="form-horizontal" action="[%c.uri_for(c.controller.action_for('index'))%]" method="post">
   [% FOREACH field IN form.fields %]
     [% form.field(field.name).render | none %]
   [% END %]
