(web admin) Improve scrolling of sidenav
Resolves #2198

--- a/html/pfappserver/root/static/scss/_navbar.scss
+++ b/html/pfappserver/root/static/scss/_navbar.scss
@@ -87,4 +87,7 @@ $navbarErrorHeight: 32px;
 // Because of additional error message bellow the main navbar, lower the content accordingly
 body.navbar-error {
   padding-top: $navbarHeight + $navbarErrorHeight;
+  .sidenav {
+    top: $navbarHeight + $navbarErrorHeight;
+  }
 }
