--- a/html/pfappserver/root/static/scss/_sidenav.scss
+++ b/html/pfappserver/root/static/scss/_sidenav.scss
@@ -12,12 +12,13 @@ $sidenavSubsectionColor:        darken($navbarInverseText, 30%);
 .sidenav {
   @extend .navbar-inverse;
   border-color: $navbarInverseBorder;
-  height: 100%;
   margin-left: 0;
-  overflow-y: auto;
   overflow: hidden;
+  overflow-y: auto;
   padding-top: $baseFontSize;
   position: fixed;
+  top: $navbarHeight;
+  bottom: 0;
 }
 
 /**
@@ -153,12 +154,37 @@ $sidenavSubsectionColor:        darken($navbarInverseText, 30%);
   padding: 0;
 }
 
+/**
+ * Subtle divider to separate sections
+ */
 .sidenav .divider {
   background-color: lighten($navbarInverseBackgroundHighlight, 10%);
   border-bottom-color: lighten($navbarInverseBackground, 10%);
 }
 
+/**
+ * Glowing divider to be placed under the headers
+ */
 .sidenav .divider-horizontal {
   border-top: 1px solid $sidenavCategoryColorActive;
   box-shadow: 0 0 6px $sidenavCategoryColorActive;
+}
+
+/**
+ * Style the scrollbar for browsers that support it
+ */
+.sidenav {
+  &::-webkit-scrollbar {
+    background-color: $navbarInverseBackground;
+    width: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $gray;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: lighten($navbarInverseBackground, 5%);
+    border-radius: 10px;
+  }
 }
