--- a/html/pfappserver/root/admin/auditing.tt
+++ b/html/pfappserver/root/admin/auditing.tt
@@ -24,6 +24,16 @@
         </li>
       </ul>
     </div><!--/.sidenav-category-->
+    <div class="sidenav sidenav-category-extend offset1 span3">
+      <ul class="nav sidenav-icon-list">
+        <li data-category="radius">
+          <div class="nav-header"><a href="#">[% l('RADIUS Audit Log') %]</a></div>
+        </li>
+        <li data-category="dhcp82">
+          <div class="nav-header"><a href="#">[% l('Option82') %]</a></div>
+        </li>
+      </ul>
+    </div><!--/.sidenav-category-extend-->
     <div class="sidenav sidenav-section offset1 span3"
          data-category="radius">
       <!-- placeholder for dynamic sidenav section -->
