--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -58,7 +58,6 @@ table.sources {
             <ul class="nav sidenav-icon-list">
               <li data-category="policy">
                 <a href="#configuration/define_policy" data-toggle="tooltip" title="[% l('Policy') %]"><i class="icon-2x icon-id-card"></i></a>
-                <!-- [% l('Policies and Access Control') %] -->
               </li>
               <li data-category="compliance">
                 <a href="#configuration/compliance" data-toggle="tooltip" title="[% l('Compliance') %]"><i class="icon-2x icon-shield"></i></a>
@@ -74,6 +73,28 @@ table.sources {
               </li>
               <li data-category="system">
                 <a href="#configuration/system_config" data-toggle="tooltip" title="[% l('System Config') %]"><i class="icon-2x icon-database"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="sidenav sidenav-category-extend offset1 span3">
+            <ul class="nav sidenav-icon-list">
+              <li data-category="policy">
+                <div class="nav-header"><a href="#">[% l('Policies and Access Control') %]</a></div>
+              </li>
+              <li data-category="compliance">
+                <div class="nav-header"><a href="#">[% l('Compliance') %]</a></div>
+              </li>
+              <li data-category="integration">
+                <div class="nav-header"><a href="#">[% l('Integration') %]</a></div>
+              </li>
+              <li data-category="portal_config">
+                <div class="nav-header"><a href="#">[% l('Portal Configuration') %]</a></div>
+              </li>
+              <li data-category="advanced_conf">
+                <div class="nav-header"><a href="#">[% l('Advanced Configuration') %]</a></div>
+              </li>
+              <li data-category="system">
+                <div class="nav-header"><a href="#">[% l('System Configuration') %]</a></div>
               </li>
             </ul>
           </div>
