--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -77,6 +77,7 @@
 @import "icon";
 @import "card";
 @import "clipboard";
+@import "documentation";
 
 // Responsive
 @import "bootstrap/responsive";
