--- a/html/pfappserver/root/admin/login.tt
+++ b/html/pfappserver/root/admin/login.tt
@@ -8,7 +8,7 @@
           <div class="card-block">
           [% IF status_msg %]
           <div class="alert alert-warning">
-            <button class="close" data-dismiss="alert-success">&times;</button>
+            <button type="button" class="close" data-dismiss="alert-success">&times;</button>
             <strong>[% l("Warning!") %]</strong> <span>[% status_msg %]</span>
           </div>
 [% END %]
