--- a/html/pfappserver/root/pfqueue/index.tt
+++ b/html/pfappserver/root/pfqueue/index.tt
@@ -1,21 +1,33 @@
 <div class="card">
   <h2 class="card-title">[% l('Queue') %]</h2>
+
 <div class="card-block">
   <table class="table table-condensed table-striped">
     <thead>
-      <tr><th colspan="3">[%l('Queue Counts')%]</th></tr>
+      <tr><th>[%l('Queue Counts')%]</th></tr>
       <tr>
         <th>[% l('Queue') %]</th>
         <th width="30%">[% l('Count') %]</th>
       </tr>
+
     </thead>
+
     [% FOREACH counter IN queue_counts %]
       <tr>
         <td> [% counter.name %]</td>
         <td> [% counter.count %]</td>
       </tr>
     [% END %]
+    
   </table>
+
+  <div>
+    <h5>[% queue_counts_graph.description %]</h5>
+    <span style="float: left; width: [% queue_counts_graph.width %]px;">
+      <img src="[% queue_counts_graph.url %]" style="height: [% queue_counts_graph.height %]px; width: [% queue_counts_graph.width %]px;">
+    </span>
+  </div>
+
   [% IF counters && counters.size > 0 %]
   <table class="table table-condensed table-striped">
     <thead>
