--- a/html/pfappserver/root/pfqueue/index.tt
+++ b/html/pfappserver/root/pfqueue/index.tt
@@ -4,7 +4,7 @@
 <div class="card-block">
   <table class="table table-condensed table-striped">
     <thead>
-      <tr><th>[%l('Queue Counts')%]</th></tr>
+      <tr><th colspan="3">[%l('Queue Counts')%]</th></tr>
       <tr>
         <th>[% l('Queue') %]</th>
         <th width="30%">[% l('Count') %]</th>
