--- a/html/pfappserver/root/configuration/integration.tt
+++ b/html/pfappserver/root/configuration/integration.tt
@@ -1,1 +1,11 @@
 <h2><b>[% l('Integration') %]</b></h2>
+
+<p>[% l('PacketFence integrates with many 3 rd party solutions. Among the solutions, there are:') %]</p>
+
+<ul>
+<li>1. <b>[% l('Firewall SSO:') %]</b> [% l('This allows PacketFence to let the firewall know who is using a particular IP address on the network. The firewall can then apply per-user or per-role policies;') %]</li>
+<li>2. <b>[% l('Cisco Mobility Services Engine:') %]</b> [% l('This provides PacketFence geographical location information of endpoints on the network. You can then provide a different captive portal based on where the device is physically located, or position an endpoint on a specific map of a building;') %]</li>
+<li>3. <b>[% l('OPSWAT Metadefender:') %]</b> [%l('This allows PacketFence to query OPSWAT Metadefender Cloud for file hashes in order to detect malware or virus infected files. This is done through the Suricata HTTP file extraction plugin;') %]</li>
+<li>4. <b>[% l('Web Services:') %]</b> [% l('This allows PacketFence to expose some of its APIs through Web Services. See the PacketFence Developer Guide for API documentation;') %]</li>
+<li>5. <b>[% l('WRIX:') %]</b> [% l('This allows PacketFence to define Wireless Roaming Intermediary eXchange (WRIX) information on access points it manages.') %]</li>
+</ul>
