--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -67,7 +67,7 @@ table.sources {
                 <a href="#configuration/integration" data-toggle="tooltip" title="[% l('Integration') %] "><i class="icon-2x icon-puzzle-piece"></i></a>
               </li>
               <li data-category="portal_config">
-                <a href="#configuration/portal_config" data-toggle="tooltip" title="[% l('Portal Configuration') %]"  ><i class="icon-2x icon-hand-paper-o"></i></a>
+                <a href="#configuration/portal_config" data-toggle="tooltip" title="[% l('Advanced Access Configuration') %]"  ><i class="icon-2x icon-hand-paper-o"></i></a>
               </li>
               <li data-category="advanced_conf">
                 <a href="#configuration/advanced_conf" data-toggle="tooltip" title="[% l('Advanced Configuration') %]"><i class="icon-2x icon-sliders"></i></a>
