--- a/html/pfappserver/root/config/fingerbank/mac_vendor/list.tt
+++ b/html/pfappserver/root/config/fingerbank/mac_vendor/list.tt
@@ -34,12 +34,14 @@
             <td>[% item.mac | html%]</td>
             <td>[% item.value | html%]</td>
             <td>
-              [%- IF can_access("FINGERBANK_CREATE") %]
-              <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ scope,  item.id ]) %]">[% l('Clone') %]</a>
-              [%- END %]
-              [%- IF scope == 'Local' && can_access("FINGERBANK_DELETE") %]
-              <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ scope, item.id ]) %]">[% l('Delete') %]</a>
-              [%- END %]
+              <div class="text-right">
+                [%- IF can_access("FINGERBANK_CREATE") %]
+                <a class="btn btn-mini" href="[% c.uri_for(c.controller.action_for('clone'), [ scope,  item.id ]) %]">[% l('Clone') %]</a>
+                [%- END %]
+                [%- IF scope == 'Local' && can_access("FINGERBANK_DELETE") %]
+                <a class="btn btn-mini btn-danger" href="[% c.uri_for(c.controller.action_for('remove'), [ scope, item.id ]) %]">[% l('Delete') %]</a>
+                [%- END %]
+              </div>
             </td>
           </tr>
           [% END -%]
