--- a/html/pfappserver/root/config/profile/index.tt
+++ b/html/pfappserver/root/config/profile/index.tt
@@ -42,7 +42,11 @@
         <td class="hidden-phone"></td>
         <td><a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('view'), ['default']) %]">[% l('default') %]</a></td>
         <td>[% l('Default Profile') %]</td>
-        <td><a class="btn btn-mini" href="/portal_preview/captive-portal?PORTAL=default" target="_blank">[% l('Preview') %]</a></td>
+        <td>
+          <div class="text-right">
+            <a class="btn btn-mini" href="/portal_preview/captive-portal?PORTAL=default" target="_blank">[% l('Preview') %]</a>
+          </div>
+        </td>
       </tr>
     </thead>
     <tbody>
@@ -59,7 +63,11 @@
             <a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('view'), [ profile_id ]) %]">[% profile_id | html %]</a>
         </td>
         <td>[% profile.field('description').value %]</td>
-        <td>[% IF can_access("CONNECTION_PROFILES_DELETE") %]<a class="btn btn-mini btn-danger call-modal" data-modal="deleteProfile" data-modal-content="[% profile_id | html %]"  href="[% c.uri_for(c.controller('Config::Profile').action_for('remove'), [ profile_id ]) %]">[% l('Delete') %]</a>[% END %] <a class="btn btn-mini" href="/portal_preview/?PORTAL=[% profile_id %]" target="_blank">[% l('Preview') %]</a></td>
+        <td>
+          <div class="text-right">
+            [% IF can_access("CONNECTION_PROFILES_DELETE") %]<a class="btn btn-mini btn-danger call-modal" data-modal="deleteProfile" data-modal-content="[% profile_id | html %]"  href="[% c.uri_for(c.controller('Config::Profile').action_for('remove'), [ profile_id ]) %]">[% l('Delete') %]</a>[% END %] <a class="btn btn-mini" href="/portal_preview/?PORTAL=[% profile_id %]" target="_blank">[% l('Preview') %]</a>
+          </div>
+        </td>
       </tr>
       [% END %]
       [% END -%]
