(web admin) Improve Sass of card

--- a/html/pfappserver/root/static/scss/_card.scss
+++ b/html/pfappserver/root/static/scss/_card.scss
@@ -3,7 +3,7 @@
 .card {
   position: relative;
   display: block;
-  background-color: #fff;
+  background-color: $cardBackground;
   width: 100%;
   margin-top: 24px;
   margin: $baseLineHeight 0;
