--- a/html/pfappserver/root/static/scss/_variables.scss
+++ b/html/pfappserver/root/static/scss/_variables.scss
@@ -2,15 +2,15 @@
 
 // Typography
 // -------------------------
-//$baseFontSize:          12px;
+//$baseFontSize:                    12px;
 
 // Component sizing
 // -------------------------
-$baseBorderRadius:      3px !default;
+$baseBorderRadius:                3px !default;
 
 // Scaffolding
 // -------------------------
-$bodyBackground:        #eee;
+$bodyBackground:                  #eee;
 
 // Navbar
 // -------------------------
@@ -19,7 +19,7 @@ $navbarHeight:                    56px;
 // GRID
 // --------------------------------------------------
 
-$gridColumns:             18; // default is 12
+$gridColumns:                     18; // default is 12
 
 
 // Horizontal forms & lists
@@ -29,3 +29,7 @@ $horizontalComponentOffset:       180px;
 // Wells
 // -------------------------
 $wellBackground:                  transparent;
+
+// Card
+// -------------------------
+$cardBackground:                  #fff;
