--- a/html/pfappserver/root/config/fingerbank/search.tt
+++ b/html/pfappserver/root/config/fingerbank/search.tt
@@ -2,8 +2,8 @@
   <div class="pull-right">
     [% INCLUDE per_page_select.tt %]
     <input name="value" type="text" placeholder="[% l('String...') %]" value="[% value | html %]"/>
-    <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i></button>
-    <button type="reset" class="btn btn-primary">&times;</button>
+    <button type="submit" class="btn-icon btn-icon-primary"><i class="icon-search icon-white"></i></button>
+    <button type="reset" class="btn-icon btn-icon-circle"><i class="icon-close"></i></button>
   </div>
 </form>
 <br/>
