--- a/html/pfappserver/root/config/switch/list.tt
+++ b/html/pfappserver/root/config/switch/list.tt
@@ -25,8 +25,8 @@
                       <option value="like" [% "selected='selected'" IF op_value == "like" %]>[% l('matches') %]</option>
                     </select>
                     <input name="searches.0.value" type="text" placeholder="[% l('String...') %]" value="[%form.field('searches.0.value').value%]"/>
-                    <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i></button>
-                    <button type="reset" class="btn btn-primary">&times;</button>
+                    <button type="submit" class="btn-icon btn-icon-primary"><i class="icon-search"></i></button>
+                    <button type="reset" class="btn-icon btn-icon-circle"><i class="icon-close"></i></button>
                   </div>
                 </form>
               [% END %]
