--- a/html/pfappserver/root/static/scss/_buttons.scss
+++ b/html/pfappserver/root/static/scss/_buttons.scss
@@ -1,11 +1,13 @@
 /// _buttons.scss -*- Mode: scss; indent-tabs-mode: nil; basic-offset: 2 -*-
 
+$iconButtonSize: 24px;
+
 .btn {
   font-size: $baseFontSize - 2;
   font-weight: normal;
   background: none;
   border: 1px solid $btnBorder;
-  color: darken($btnBorder, 40%);;
+  color: darken($btnBorder, 40%);
   box-shadow: none;
   text-shadow: none;
   text-transform: uppercase;
@@ -36,31 +38,80 @@
 }
 
 .btn-warning {
+  background-color: transparent;
   border-color: $btnWarningBackground;
   color: $btnWarningBackground;
 }
 
 .btn-danger,
 .btn-danger.disabled {
-  background-color: $white;
+  background-color: transparent;
   border-color: $btnDangerBackground;
   color: $btnDangerBackground;
 }
 
 /* icon-only links */
 .btn-icon {
+  background-color: transparent;
+  border: none;
   color: #000000;
   cursor: pointer;
   text-shadow: 0 1px 0 #ffffff;
-  opacity: 0.2;
-  filter: alpha(opacity=20);
   font-size: 17px;
   margin-left: 3px;
   vertical-align: middle;
+  &:hover {
+    color: #000000;
+    text-decoration: none;
+  }
 }
-.btn-icon:hover {
-  color: #000000;
-  text-decoration: none;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
+
+// Special icon button that appears inside table (+ and -)
+.action .btn-icon {
+  opacity: 0.2;
+  filter: alpha(opacity=20);
+  &:hover {
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+  }
+}
+
+// Primary button is displayed as a circle
+.btn-icon-primary.btn-icon {
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid $btnPrimaryBackground;
+  color: $btnPrimaryBackground;
+  display: inline-block;
+  font-size: 12px;
+  height: $iconButtonSize;
+  line-height: $iconButtonSize;
+  padding: 0;
+  text-align: center;
+  width: $iconButtonSize;
+  &:hover {
+    background-color: $btnPrimaryBackground;
+    color: $white;
+  }
+}
+
+// Neutral circle button
+.btn-icon-circle.btn-icon {
+  border: 1px solid $btnBorder;
+  background-color: transparent;
+  border-radius: 50%;
+  box-sizing: border-box;
+  color: darken($btnBorder, 20%);
+  display: inline-block;
+  font-size: 12px;
+  height: $iconButtonSize;
+  line-height: $iconButtonSize - 2;
+  padding: 0;
+  text-align: center;
+  width: $iconButtonSize;
+  &:hover {
+    background-color: $white;
+    border-color: darken($btnBorder, 20%);
+    color: darken($btnBorder, 60%);
+  }
 }
