(web admin) Force pointer cursor over links

--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -12,6 +12,7 @@
 
 // Grid system and page structure
 @import "bootstrap/scaffolding";
+@import "scaffolding";
 @import "bootstrap/grid";
 @import "bootstrap/layouts";
 
